exports[`<ParentApp /> renders the Parent with the AreYouReady component active if not installed 1`] = `
<View>
  <View
    component={[Function]}
    initial={true} />
  <View
    component={[Function]} />
  <View
    component={[Function]}
    initial={undefined} />
  <View
    component={[Function]} />
  <View
    component={[Function]} />
  <View
    component={[Function]}
    initial={true} />
  <View
    component={[Function]} />
  <View
    component={[Function]} />
  <View
    component={[Function]}
    initial={undefined} />
  <View
    component={[Function]} />
  <View
    component={[Function]} />
</View>
`;

exports[`<ParentApp /> renders the Parent with the ReportHome component active if installed 1`] = `
<View>
  <View
    component={[Function]}
    initial={false} />
  <View
    component={[Function]} />
  <View
    component={[Function]}
    initial={undefined} />
  <View
    component={[Function]} />
  <View
    component={[Function]} />
  <View
    component={[Function]}
    initial={true} />
  <View
    component={[Function]} />
  <View
    component={[Function]} />
  <View
    component={[Function]}
    initial={Array []} />
  <View
    component={[Function]} />
  <View
    component={[Function]} />
</View>
`;

exports[`<ParentApp /> renders the Parent with the SplashScreen component active if not installed 1`] = `
<View>
  <View
    component={[Function]}
    initial={true} />
  <View
    component={[Function]} />
  <View
    component={[Function]}
    initial={undefined} />
  <View
    component={[Function]} />
  <View
    component={[Function]} />
  <View
    component={[Function]}
    initial={true} />
  <View
    component={[Function]} />
  <View
    component={[Function]} />
  <View
    component={[Function]}
    initial={undefined} />
  <View
    component={[Function]} />
  <View
    component={[Function]} />
</View>
`;
